# family_emotions_app_light

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  DEPLOY_DATABASE.md  DEPLOY_WITH_PROXY.md  Dockerfile  Dockerfile.proxy  Makefile  README.md  UTM_TRACKING.md  docker-compose.coolify.yml  docker-compose.proxy.yml  docker-compose.with-proxy.yml  docker-compose.yml  init.sql  nixpacks.toml  pyproject.toml  requirements.txt  start-with-proxy.sh
src/: main.py
src/application/: services.py
src/domain/: entities.py  examples.py  value_objects.py
src/infrastructure/: analytics.py  anthropic_client.py  config.py  database.py  proxy_wrapper.py  rate_limiter.py
src/presentation/: handlers.py  keyboards.py  messages.py  states.py
tests/: test_domain.py  test_services.py
